--- a/workers/workers.html
+++ b/workers/workers.html
@@ -13,7 +13,7 @@
     <div class="container">
         <form>
             <fieldset class="form-group">First name: <input type="text" id="firstName" class="form-control"></fieldset>
-            <fieldset class="form-group">Surname: <input type="text" id="surname" class="form-control"></fieldset>
+            <fieldset class="form-group">Last name: <input type="text" id="surname" class="form-control"></fieldset>
             <fieldset class="form-group">Working experience: <input type="text" id="wyears" class="form-control"></fieldset>
             <fieldset class="form-group">Education:
                 <select id="education" class="form-control">
