Added two buttons and image

--- a/dogs/dog-album.html
+++ b/dogs/dog-album.html
@@ -6,6 +6,8 @@
     <script src="./dogs.js"></script>
 </head>
 <body>
-    
+    <img id="dog" src="./images/1.jpg" alt="doggy"><br>
+    <input type="button" onclick="prethodna()" value="Prethodna slika">
+    <input type="button" onclick="sledeca()" value="Sledeca slika">
 </body>
 </html>
